# deep

./: Cargo.toml  README.md
.github/workflows/: release.yml
migrations/: 001_init.sql  002_bindings_config.sql
src/: config.rs  db.rs  lib.rs  main.rs  proxy.rs  runner.rs  runtime.rs  systemd.rs
src/cli/: addons.rs  apps.rs  deploy.rs  git.rs  host.rs  image.rs  logs.rs  mod.rs  proxy.rs  releases.rs
templates/: addon.container  app.container  app.toml  caddy.container
tests/: config.rs  deploy_flow.rs  deploy_invariants.rs  git_init.rs  proxy_file.rs  proxy_rollback.rs
